--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
       <h1><%= @cocktail.name %></h1>
       <ul class="list-group">
         <% @cocktail.doses.each do |dose| %>
-        <p><strong><%= dose.ingredient.name %></strong> - <%= dose.description %></p>
+        <p><strong><%= dose.ingredient.name %></strong> - <%= dose.description %> <%= link_to "Delete", dose_path(dose), method: :delete %></p>
         <% end %>
       </ul>
       <%= link_to "Add a new dosage", new_cocktail_dose_path(@cocktail), class: 'btn btn-primary' %><br>
