--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
       <h1>Create a new cocktail</h1>
       <%= simple_form_for ([@cocktail, @dose]) do |f| %>
         <%= f.input :description %>
